# bad-autoencoding

./: .gitignore  HYPE.md  LICENSE  README.md  pyproject.toml  train.py
data/: README.md
data/scripts/: convert_to_arrow.py  create_quick_splits.py  download_finewiki.py  filter_finewiki.py  prepare_training_data.py
scripts/: run_example.sh
trainers/: __init__.py  config.py  conv1d.py  conv1d_residual.py  conv1d_residual_auxloss.py  meanpool.py  randproj.py  subsample.py  text.py  vision.py
trainers/utils/: __init__.py  freezing.py  generation.py  image.py  memory.py  model.py
training/: __init__.py  arguments.py  arrow_datasets.py  checkpoints.py  metrics.py  naming.py  validation.py
